Fix spacing on article subheadings

--- a/client/style/pages/_article-view.scss
+++ b/client/style/pages/_article-view.scss
@@ -37,3 +37,9 @@
     margin-top: .15rem;
   }
 }
+
+.article-view__content {
+  h1 {
+    margin-bottom: 1rem;
+  }
+}
